// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Form/Uploader Default 1`] = `
.c0 {
  position: relative;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <label
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        label
      </label>
      <label
        htmlFor="id"
        style={
          Object {
            "cursor": "pointer",
            "display": "block",
            "fontSize": 18,
            "lineHeight": "24px",
            "opacity": 1,
            "paddingBottom": 30,
            "width": "calc(100% - 70px)",
          }
        }
      >
        Select a file
      </label>
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <label
          htmlFor="id"
          style={
            Object {
              "position": "relative",
              "top": 10,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": 0,
                "margin": "0",
                "minHeight": "48px",
                "opacity": 1,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
              />
            </svg>
          </div>
        </label>
      </div>
      <input
        aria-hidden={true}
        disabled={false}
        id="id"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="file"
      />
    </div>
    <label
      htmlFor="id"
      id="dropZone-schema-ui"
      onDrop={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "border": "2px dashed #2F2F36",
          "borderRadius": 10,
          "cursor": "copy",
          "display": "flex",
          "height": "calc(100% - 10px)",
          "justifyContent": "center",
          "left": 0,
          "lineHeight": "50px",
          "opacity": 0,
          "position": "absolute",
          "textAlign": "center",
          "top": 5,
          "transition": "opacity 200ms ease-in-out",
          "visibility": "hidden",
          "width": "100%",
        }
      }
    >
      Drop here
    </label>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Form/Uploader With error 1`] = `
.c0 {
  position: relative;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  color: #f21e29;
  margin: -20px 0 20px 0;
  font-size: 0.9em;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      style={
        Object {
          "position": "relative",
        }
      }
    >
      <label
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        label
      </label>
      <label
        htmlFor="id"
        style={
          Object {
            "cursor": "pointer",
            "display": "block",
            "fontSize": 18,
            "lineHeight": "24px",
            "opacity": 1,
            "paddingBottom": 30,
            "width": "calc(100% - 70px)",
          }
        }
      >
        Select a file
      </label>
      <div
        style={
          Object {
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <label
          htmlFor="id"
          style={
            Object {
              "position": "relative",
              "top": 10,
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "#1d1d20",
                "border": "none",
                "borderRadius": "48px",
                "color": "#FFF",
                "cursor": "pointer",
                "display": "inline-block",
                "fill": "#FFF",
                "fontSize": 0,
                "margin": "0",
                "minHeight": "48px",
                "opacity": 1,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              }
            }
          >
            <svg
              style={
                Object {
                  "fill": "#FFF",
                  "height": "60px",
                  "width": "60px",
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M16 42V32h3v7h23v-7h3v10H16zm14.5-30.121l9.06 9.06-2.12 2.122-5.441-5.441L32 33h-3l-.001-15.378-5.438 5.439-2.122-2.122 9.061-9.06z"
              />
            </svg>
          </div>
        </label>
      </div>
      <input
        aria-hidden={true}
        disabled={false}
        id="id"
        name="name"
        onChange={[Function]}
        style={
          Object {
            "height": 0,
            "left": 0,
            "overflow": "hidden",
            "position": "absolute",
            "top": 0,
            "visibility": "hidden",
          }
        }
        type="file"
      />
    </div>
    <label
      htmlFor="id"
      id="dropZone-schema-ui"
      onDrop={[Function]}
      style={
        Object {
          "alignItems": "center",
          "background": "#000",
          "border": "2px dashed #2F2F36",
          "borderRadius": 10,
          "cursor": "copy",
          "display": "flex",
          "height": "calc(100% - 10px)",
          "justifyContent": "center",
          "left": 0,
          "lineHeight": "50px",
          "opacity": 0,
          "position": "absolute",
          "textAlign": "center",
          "top": 5,
          "transition": "opacity 200ms ease-in-out",
          "visibility": "hidden",
          "width": "100%",
        }
      }
    >
      Drop here
    </label>
    <div
      className="c1"
    >
      error
    </div>
  </div>
</div>
`;
